@startuml ATM_Client_StateMachine
skinparam monochrome true
skinparam shadowing false
skinparam dpi 150

[*] --> NoCard

state NoCard {
    [*] --> Idle : Нет карты
}

state CardInserted {
    [*] --> CardIn : Карта вставлена (16 цифр)
}

state PIN_Entry {
    [*] --> EnteringPIN : Ввод PIN
    EnteringPIN --> PIN_Entry : Неверный PIN [попытки < 3]
    EnteringPIN --> Authenticated : Корректный PIN
    EnteringPIN --> CardRetainedBlocked : Неверный PIN [попытки >= 3]
    EnteringPIN --> CardRetainedBlocked : Карта уже заблокирована
}

state Authenticated {
    [*] --> Menu : Меню операций
    Menu --> CheckBalance : 1. Check Balance
    Menu --> Withdraw : 2. Withdraw
    Menu --> Deposit : 3. Deposit
    Menu --> Transfer : 4. Transfer
    Menu --> Payment : 5. Payment
    Menu --> PinChange : 6. Pin Change
    CheckBalance --> Menu : результат + Enter
    Withdraw --> Menu : результат + Enter
    Deposit --> Menu : результат + Enter
    Transfer --> Menu : результат + Enter
    Payment --> Menu : результат + Enter
    PinChange --> Menu : результат + Enter
}

state SessionEnding {
    [*] --> EjectCard : Извлечение карты
    EjectCard --> NoCard : Карта извлечена
}

state CardRetainedBlocked {
    [*] --> Retained : Карта изъята
    Retained --> Blocked : Карта заблокирована
    Blocked --> NoCard : После сообщения
}

NoCard --> CardInserted : Вставка карты (16 цифр)
CardInserted --> PIN_Entry : Ввод PIN
Authenticated --> SessionEnding : 7. Exit / Таймаут
Menu --> SessionEnding : 7. Exit

note right of PIN_Entry
    Проверка через BankGateway
end note

note right of CardRetainedBlocked
    Блокировка в банке + изъятие карты
end note

note right of Authenticated
    После каждой операции:
    результат на экран, *Beep*, диалог
    "Print receipt? (y/n)" — выдача чека по выбору,
    затем Enter
end note

@enduml
